force-app/main/default/objects/si__c/si__c.object-meta.xml
<CustomObject>
    <label>si</label>
    <nameField>
        <label>si Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>