force-app/main/default/objects/si__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <formula>simple_intrest__c + principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>