force-app/main/default/objects/si__c/fields/principal__c.field-meta.xml
<CustomField>
    <fullName>principal__c</fullName>
    <label>principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>