force-app/main/default/objects/si__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <label>rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>