force-app/main/default/objects/si__c/fields/simple_intrest__c.field-meta.xml
<CustomField>
    <fullName>simple_intrest__c</fullName>
    <formula>( principal__c * rate__c * time__c )/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>simple intrest</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>