force-app/main/default/objects/si__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <label>time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>